# notion-graph-view

./: Makefile  README.md  makefile  mypy.ini  pyproject.toml
.github/actions/python_setup/: action.yml
.github/workflows/: app.yml  test_lint.yml
backend/: build.gradle.kts  docker-compose.yml  makefile  settings.gradle.kts
backend/contexts/notes/: build.gradle.kts
backend/src/main/resources/: application.yml
frontend/: Dockerfile  Dockerfile.init  INSTALLATION.md  README.md  docker-compose.yml  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.html  app.config.ts  app.routes.ts
frontend/src/environments/: environment.ts
scripts/: create_aggregate.py  insert_template.py  remove_dependency.sh
scripts/test/: integration.sh  unit.sh
scripts/tests/: acceptance.sh  all-integration.sh  all-unit.sh
src/delivery/api/: main.py  notes_response.py
src/delivery/api/notes/: find_all_notes_route.py
src/delivery/frontend/: Dockerfile  docker-compose.yml
src/delivery/frontend/graph/: package-lock.json
src/graph/notes/application/: all_notes_finder.py
src/graph/notes/domain/: note.py  note_id.py  note_title.py  note_url.py  notes_database_id.py  notes_repository.py  related_note.py  related_notes_ids.py
src/graph/notes/infra/: notion_notes_repository.py
src/shared/domain/value_objects/: string_value_object.py  uuid.py  uuids.py
tests/delivery/api/: test_delivery.py
tests/graph/notes/: notes_module_unit_test_config.py
tests/graph/notes/domain/: note_id_mother.py  (+5 more)
tests/shared/domain/: random_generator.py
(+169 files in other folders)
