[project]
name = "notion-graph-view"
version = "0.1.0"
description = "Graph visualization tool for Notion pages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.1"
]
license = { file = "LICENSE" }

[dependency-groups]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.7.4"
]
test = [
    "expects>=0.9.0",
    "doublex>=1.9.6.1",
    "pytest>=8.3.3",
    "doublex-expects>=0.7.1",
    "pytest-xdist>=3.6.1",
    "pytest-watch>=4.2.0",
    "behave>=1.2.6",
    "requests>=2.32.3",
    "faker>=33.1.0"
]
